# cerebri_cubs2

./: .gitignore  CMakeLists.txt  Kconfig  README.md  RUMOCA_PERFORMANCE_HANDOFF.md  flake.nix  prj.conf  west.yml
.github/workflows/: build-binaries.yml  ci.yml  fastdyn.yml
boards/: mr_vmu_tropic.conf  mr_vmu_tropic.overlay  mr_vmu_tropic_fastdyn_realtime.conf  native_sim.conf  native_sim.overlay  native_sim_native_64.conf  native_sim_native_64.overlay  native_sim_sil.conf
cmake/: InstallRumoca.cmake  RunRumocaCompile.cmake
docs/: fastdyn-diagnostics.md  fastdyn.md
fastdyn/: diagnostic.gdb  mr_vmu_tropic.overlay  mr_vmu_tropic.toml  prj.conf  run_mission.sh
modelica/: FixedWingOuterLoop.mo
models/plant/: FixedWingSIL.mo  SportCubSIL.mo
nix/: README.md  flake.nix  nixos-module.nix
scripts/: rumoca_check.py  rumoca_codegen.py  rumoca_scenario.py  run-zephyr-sil-flight-test.sh  setup-nix.sh
spec/: README.md
src/: CMakeLists.txt  FixedWingOuterLoop.mo  csyn_topics.c  cubs2_efmi_control.h  efmi_wrapper.h  fastdyn_board.c  main.c  main_realtime.c  main_sil.c  native_sil_host.c  native_sil_transport.c  native_sil_transport.h  runtime_control.c  runtime_control.h  zros_topics.c
src/generated_fixed_wing/: CubControl.mo  CubControl_FixedWingOuterLoop.c  CubControl_FixedWingOuterLoop.h
subsys/lockstep/: CMakeLists.txt  README.md  lockstep.c  lockstep.h  lockstep_host.c
tests/flight/: Cubs2FlightScenarios.mo  rumoca-scenario.altitude.toml  rumoca-scenario.heading.toml  rumoca-scenario.pattern.toml  rumoca-scenario.takeoff.toml  run_cubs2_flight_sil.py
tests/runtime_control/: run.sh  runtime_control_test.c
tests/runtime_control/include/csyn/: csyn.h
tests/runtime_control/include/zephyr/: kernel.h
tests/runtime_control/include/zephyr/sys/: util.h
tests/zephyr/: Cubs2NativeSimSIL.mo  fmi3_lockstep_runner.c  fmi3_native_sil_runner.c  native_sil_io.fbs  rumoca-scenario.native-sim.toml  run_native_sim_zenoh_sil.py
tools/fastdyn_bridge/: Cargo.toml
tools/fastdyn_bridge/src/: main.rs
